syntax = "proto3";
package milkyway.liquidvesting.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/milkyway-labs/milkyway/v2/x/liquidvesting/types";

// UserInsuranceFund defines a user's insurance fund.
message UserInsuranceFund {
  // Amount of coins deposited into the user's insurance fund.
  repeated cosmos.base.v1beta1.Coin balance = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// BurnCoins is a struct that contains the information about the coins to burn
// once the unbonding period of the locked representation tokens ends.
message BurnCoins {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // Address of who has delegated the coins.
  string delegator_address = 1
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // CompletionTime is the unix time for unbonding completion.
  google.protobuf.Timestamp completion_time = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.stdtime) = true
  ];

  // Amount of coins to be burned from the delegator address.
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// BurnCoinsList represents a list of BurnCoins.
message BurnCoinsList {
  repeated BurnCoins data = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// UserInsuranceFundEntry represents an entry containing the data of a user
// insurance fund.
message UserInsuranceFundEntry {
  // Address of who owns the insurance fund.
  string user_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Amount of coins deposited into the user's insurance fund.
  repeated cosmos.base.v1beta1.Coin balance = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
